# microRobotFramework

./: CMakeLists.txt  sensor_data_rx.py
101_caemra_thread/: CMakeLists.txt
104_tcp_socket_image/: CMakeLists.txt
105_serial_camera_tcp_thread/: CMakeLists.txt
C++/: CMakeLists.txt  build_linux.sh
C++/cmake/: microRobotFramework.pc.in  microRobotFrameworkConfig.cmake.in
C++/common/: CMakeLists.txt
C++/common/include/: CommonTypes.h
C++/doc/: cmake_build_setup.md  serial_comm_protocol.md
C++/microRobotFramework_01/: CMakeLists.txt  microRobotFramework.cpp  microRobotFramework_01.cpp  mrf_example_01  mrf_example_01.cpp
C++/microRobotFramework_01/mpu6050_get_raw_data_01/: mpu6050_get_raw_data_01.ino  mpu6050_receive_raw_data_01.py
C++/microRobotFramework_02/: CMakeLists.txt  microRobotFramework_02.cpp  microRobotFramework_02.hpp  mrf_example_02  mrf_example_02.cpp
C++/microRobotFramework_02/mpu6050_get_raw_data/: mpu6050_get_raw_data.ino
C++/microRobotFramework_02/mpu6050_get_raw_data_02/: mpu6050_get_raw_data_02.ino  mpu6050_receive_raw_data_02.py
C++/microRobotFramework_03/: CMakeLists.txt  microRobotFramework_03.cpp  mrf_example_03.cpp
C++/microRobotFramework_03/mpu6050_get_raw_data_03/: mpu6050_get_raw_data_03.ino
C++/microRobotFramework_04/: CMakeLists.txt  microRobotFramework_04.cpp
Python/microRobotFramework_python_01/: README.md  __init__.py  microRobotFramework.py  mrf_example_01.py  requirements.txt  setup.py
Python/microRobotFramework_python_02/: README.md  __init__.py  microRobotFramework_02.py  mrf_example_02.py  requirements.txt  setup.py
Python/microRobotFramework_python_03/: README.md  __init__.py  microRobotFramework_03.py  mrf_example_03.py  setup.py
Python/microRobotFramework_python_04/: MRF_odometry.py  README.md  __init__.py  microRobotFramework_04.py  mrf_example_04.py  requirements.txt  setup.py
archive/102_camera_serial_thread/: CMakeLists.txt
microRobotFramework_01/: microRobotFramework.cpp  microRobotFramework.hpp  mrf_example_01  mrf_example_01.cpp
microRobotFramework_01/mpu6050_get_raw_data/: mpu6050_get_raw_data.ino  mpu6050_receive_raw_data.py
microRobotFramework_02/: CMakeLists.txt  README.md  microRobotFramework.cpp
microRobotFramework_03/: CMakeLists.txt
