# C++/CMakeLists.txt
cmake_minimum_required(VERSION 3.10)
project(RobotFrameworks_cpp)

# Add the subdirectories where the actual build targets are defined
add_subdirectory(microRobotFramework_01)
add_subdirectory(microRobotFramework_02)
add_subdirectory(microRobotFramework_03)
#add_subdirectory(microRobotFramework_04)